--- a/yoga/public/index.html
+++ b/yoga/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Sea and Forest Trindade Yoga Hostel</title>
+    <title>Trindade Yoga Hostel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
